[package]
name = "danish-rust"
version = "0.1.0"
authors = ["Andrew McConachie <andrew@depht.com>"]
edition = "2018"

[dependencies]
pcap = { version = "0.7", features = ["tokio"] }
ctrlc = { version = "3.0", features = ["termination"] }
etherparse = { version = "0.8.0" }
iptables = { version = "0.2" }
tls-parser = { version = "0.7.0" }
nom = { version = "^4.1" }
